--- a/application-form.html
+++ b/application-form.html
@@ -20,7 +20,7 @@
             <label>Salary Requirement: $<input class="inputbox" type="text" name="salaryrequirement"></label><br>
 
             Desired Job Position:
-            <select class="inputbox" name="jobpositions">
+            <select class="inputbox" name="jobposition">
                 <label><option value="softwareengineer">Software Engineer</option></label>
                 <label><option value="qaengineer">QA Engineer</option></label>
                 <label><option value="productmanager">Product Manager</opton></label>
