--- a/application-form.html
+++ b/application-form.html
@@ -21,9 +21,9 @@
 
             Desired Job Position:
             <select class="inputbox" name="jobposition">
-                <label><option value="softwareengineer">Software Engineer</option></label>
-                <label><option value="qaengineer">QA Engineer</option></label>
-                <label><option value="productmanager">Product Manager</opton></label>
+                <label><option value="Software Engineer">Software Engineer</option></label>
+                <label><option value="QA Engineer">QA Engineer</option></label>
+                <label><option value="Product Manager">Product Manager</opton></label>
             </select><br><br><br>
 
             <input class="inputbox" type="submit">
