--- a/application-form.html
+++ b/application-form.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Skills-HTML-CSS</title>
-        <link href="styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Job Application Form</h1>
@@ -27,7 +27,6 @@
             </select><br><br><br>
 
             <input class="inputbox" type="submit">
-
         </form>
     </body>
 </html>
